--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ashikur Rahman</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Full stack Web app Developer, Freelancer, Digital Marketer, "></span></p>
     </div>
   </section><!-- End Hero -->
   <main id="main">
@@ -87,15 +87,15 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dhamrai, Dhaka</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-				  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ashiklive247@gmail.com</span></li>
+				  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ashikur4183@gmail.com</span></li>
                 </ul>
               </div>
             </div>
             <p class="para">
-			  I am basically a full stack web application developer. I have more than 2 years of experience in this field. I have worked as a freelancer for a long time on Fiverr.com, freelancer.com. Recently, I am now working with some specific clients and working to expand my business and I venture to work for future generations.
+			  I am basically a full stack web application developer. I have more than 4 years of experience in this field. I have worked as a freelancer for a long time on Fiverr.com & freelancer.com. Recently, I am now working with some specific clients and working to expand my business and I venture to work for future generations.
             </p>
           </div>
         </div>
@@ -168,9 +168,7 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="progress">
+			<div class="progress">
               <span class="skill">PHP <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -182,10 +180,36 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">75%</i></span>
+              <span class="skill">Digital Marketing <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">Social Media Marketing <i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">SEO <i class="val">45%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+			<div class="progress">
+              <span class="skill">Illustrator <i class="val">55%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+			<div class="progress">
+              <span class="skill">Photoshop <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           </div>
@@ -204,43 +228,59 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Ashikur Rahman</h4>
-              <p class="para"><em>I have more than 2 years of experience in web app development. Also I have skills in graphic design, digital marketing, bug fixing.</em></p>
+              <p class="para"><em>I have more than 4 years of experience in web app development. Also I have skills in graphic design, digital marketing & bug fixing.</em></p>
               <ul>
                 <li>Dhamrai, Dhaka-1350</li>
                 <li>+880 131 515 8365</li>
-                <li>ashiklive247@gmail.com</li>
+                <li>ashikur4183@gmail.com</li>
               </ul>
             </div>
-            <h3 class="resume-title">Education</h3>
+			<h3 class="resume-title">Educational Qualification</h3>
+			<div class="resume-item pb-0">
+              <h4>Dawra Hadith &#40;Takmil&#41; </h4>
+              <h5>2019 &#8811 </h5>
+			  <p class="para"><em>Jamia Arabia Shamsul Uloom, Faridpur.</em></p>
+              <ul>
+                <li>Darsul Quran, Darsul Hadith, Fiqh &#38 Islamic Law.</li>
+              </ul>
+            </div>
+			
+            <h3 class="resume-title">Training &#38 Course</h3>
             <div class="resume-item">
-              <h4>Graphics Design;</h4>
-              <h5>2023 &#8811 6 month</h5>
-              <p><em>Quick Team Academy</em></p>
-              <p class="para">Logo design, Banner design, Poster design, Prospectus design &#38 best quality photo editing.</p>
+              <h4>Digital Marketing;</h4>
+              <h5>2024 &#8811 6 months</h5>
+              <p><em>NazmC Institute</em></p>
+              <p class="para">Google ads, Facebook Marketing, Social Media Marketing &#38 SEO.</p>
             </div>
 			<div class="resume-item">
               <h4>Basic Trade 360 hours;</h4>
-              <h5>2023 &#8811 6 month</h5>
+              <h5>2023 &#8811 6 months</h5>
               <p><em>Dhamrai Prince Polytechnic & Medical Institute</em></p>
               <p class="para">MS office &#10088; word, xcel, powerpoint&#10089.</p>
             </div>
 			<div class="resume-item">
-              <h4>Advance WordPress Theme Development;</h4>
-              <h5>2020 &#8811 6 month</h5>
-              <p><em>Soft Tech-IT</em></p>
-              <p class="para">WordPress Theme Development, Customize etc.</p>
+              <h4>Digital Marketing;</h4>
+              <h5>2022 &#8811 6 months</h5>
+              <p><em>Passive Journal University</em></p>
+              <p class="para">Google ads, Facebook Marketing, Social Media Marketing &#38 SEO.</p>
             </div>
 			<div class="resume-item">
-              <h4>Web Design Development</h4>
-              <h5>2020 &#8811 6 month</h5>
+              <h4>Advance Web App Development</h4>
+              <h5>2020 &#8811 6 months</h5>
               <p><em>FN Software</em></p>
               <p class="para">HTML, CSS, Bootstrap, JavaScript, jQuery, PHP, MySQL.</p>
             </div>
 			<div class="resume-item">
-              <h4>Advance Web App Development</h4>
-              <h5>2019 &#8811 1 year</h5>
-              <p><em>W3School</em></p>
+              <h4>Full stack Web App Development</h4>
+              <h5>2020 &#8811 6 months</h5>
+              <p><em>W3 School</em></p>
               <p class="para">Basic programming languages like HTML, CSS, Bootstrap, JavaScript, jQuery, PHP, MySQL.</p>
+            </div>
+			<div class="resume-item">
+              <h4>Advance WordPress Theme Development;</h4>
+              <h5>2019 &#8811 6 months</h5>
+              <p><em>Soft Tech-IT</em></p>
+              <p class="para">WordPress Theme Development, Customize etc.</p>
             </div>
 			<!-- <div class="resume-item"> -->
               <!-- <h4>Full-stack Web App Development</h4> -->
@@ -251,12 +291,36 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
+			<div class="resume-item">
+              <h4>File processing officer</h4>
+              <h5>May, 2023 to till now</h5>
+              <p><em>Tisha-IT, Dhamrai, Dhaka.</em></p>
+              <ul class="para">
+                <li>To process the files of all activities of the organization, to approve any work, which works for the development of the organization.</li>
+              </ul>
+            </div>
+			<div class="resume-item">
               <h4>Designer</h4>
-              <h5>Dec, 2023 to till now</h5>
-              <p><em>Best Computer &#38 IT Farm Sena Shopping Complex, Nabinagar.</em></p>
+              <h5>Feb, 2024 to till now</h5>
+              <p><em>Ma Babar Dowa Enterprise, Sena Shopping Complex, Nabinagar.</em></p>
+              <ul class="para">
+                <li>Designing, developing, researching &#38 marketing.</li>
+              </ul>
+            </div>
+			<div class="resume-item">
+              <h4>Designer</h4>
+              <h5>Dec, 2023 to Feb, 2024</h5>
+              <p><em>Best Computer &#38 IT Farm, Sena Shopping Complex, Nabinagar.</em></p>
               <ul class="para">
                 <li>Designing, developing &#38 researching.</li>
+              </ul>
+            </div>
+			<div class="resume-item">
+              <h4>Processing Officer</h4>
+              <h5>June, 2023 to June, 2023</h5>
+              <p><em>Dhamrai Savar IT, Bosila Road, Muhammadpur, Dhaka.</em></p>
+              <ul class="para">
+                <li>File processing, researching &#38 bug fixing.</li>
               </ul>
             </div>
 			<div class="resume-item">
@@ -520,7 +584,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>ashiklive247@gmail.com</p>
+                <p>ashikur4183@gmail.com</p>
               </div>
               <div class="phone">
                 <i class="bi bi-phone"></i>
